--- a/argocd/apps/mend-renovate/manifests/renovate-secret.enc.yaml
+++ b/argocd/apps/mend-renovate/manifests/renovate-secret.enc.yaml
@@ -4,10 +4,12 @@ metadata:
     name: renovate-secrets
 type: Opaque
 stringData:
-    mariadb-root-password: ENC[AES256_GCM,data:bwX2tVim64zaMSujZXkUlb/9zKnUxEJZJTNW8iiF2vGrpse8pkaqEYcyCJRjt6xglNdJUHlZBUpX1sW63/CScg==,iv:uI2THx1QrXHwVwgFesqHeoZrV0qSB7QakdEa76JtGRw=,tag:Be6hNITE2q1dmNexY8tU3Q==,type:str]
-    mariadb-replication-password: ENC[AES256_GCM,data:RPvjxazFUjaNGfsaOlsBbq2t/z4V61okAqj+PJsYBIZqhEouHKzXfcWtUoxJqAZeFslCliZBPgwq80TCF9LGvA==,iv:96B+HsIzo4k64oNieP34XoH+6WJ5P5ZV2A+vL4WAXMU=,tag:u6lefd6EV0QL7JdBgnxvZQ==,type:str]
-    mariadb-password: ENC[AES256_GCM,data:45uJaNg=,iv:cahVK0JoYOU6YMT7WBUD95WlMKmKp0yKlJadLfthMus=,tag:zOAGTUPRVn8W1Les7B2QIQ==,type:str]
-    db-username: ENC[AES256_GCM,data:Rh12i0+KXvQB,iv:C6Ipx4NVAMJEDKKcZOj0Xyo1iZR9HSMoS1+qxwdGxOE=,tag:yo5YPGbDtFf0J0YF4r0YLA==,type:str]
+    mendRnvLicenseKey: ENC[AES256_GCM,data:l6QVSxDPYMKqvLE2ved9T6jJ4im36Hh5WCvRxt3gL5w2q+tEDDWAwygFGl1lU/p8POXgpsg97865og0TGCicB/qx3c0WykP+k4s7e5Dfr97PQ1xSZKHZJY9EMIPGMF4Y2Tb2p8bDUKVF+C1FyrYRgNj6M2soni5X5pH8l64z/3GYiAKiYRxuhps4wqXJYn6rOyCEyDGO9gLosBCgTspXKZE=,iv:KtFstM+8mRuGj8B+uc9LCvzkfbF1a5cjceSJMh2PiEU=,tag:nXHOadLw5XhsQ35AY/yAOA==,type:str]
+    mendRnvGithubAppId: null
+    mendRnvGithubAppKey: null
+    mendRnvWebhookSecret: null
+    mendRnvServerApiSecret: null
+    mendRnvServerApiSecret: null
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +25,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-06T13:41:09Z"
-    mac: ENC[AES256_GCM,data:wZ7Dgt+kasS3u4NYeXC9a3yXYlV8Sjz4ZQB8lvAuSrXbrBShuI6mu8va6aCJK+aF0GcYpo28giPeng9VWW4odtjC/U3rYRIwPYkyfQ7GCk6Gz1XvEAeityWtk1rHMusVmB1PCPO6e8RBxBuuPZeFYgky60z8ZJ2meUddHr9Vbp4=,iv:fHXYUkmKDvaQZFq5m3ygyUFQOC4YtkzWTpN0aJ88Ofo=,tag:cBAnhsPscUJLKjvvr99Y9Q==,type:str]
+    lastmodified: "2025-02-06T13:56:00Z"
+    mac: ENC[AES256_GCM,data:oxj6YgHuAsjeCnPDips1JxK+C+IFCLiioNDzo7qDDy3lYg/yvgd+LU5QQimDu3NkGNW7Df2JB6st0IS/XOLlz6Z1xn2JunJFswUdUg2k3hLMM1TuS2lkobh4MFdSU8M63fVVXDnNASDUrA1h2BHH/+K18h9FOE8Ieq/5npnHl3s=,iv:GtYh14IBLcXdPKqCmBHMyWDcAkIl1j5kn8TbxZGxvbk=,tag:jG/ihAyGka4dGWRw0BhqgA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
