--- a/argocd/apps/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/mend-renovate/manifests/values.yaml
@@ -2,7 +2,7 @@ renovate:
   mendRnvAcceptTos: y
   mendRnvPlatform: github
   mendRnvEndPoint: https://api.github.com/
-  existingSecret: renovate-secret
+  existingSecret: renovate-secrets
 
   config: |
     module.exports = {
