--- a/argocd/apps/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/mend-renovate/manifests/values.yaml
@@ -6,9 +6,7 @@ renovate:
 
   config: |
     module.exports = {
-      // Enter self-hosted configuration options here.
-      // https://docs.renovatebot.com/self-hosted-configuration/
-      "dependencyDashboard": true
+      "extends": ["config:best-practices"]
     }
 
 ingress:
