--- a/argocd/apps/mend-renovate/manifests/kustomization.yaml
+++ b/argocd/apps/mend-renovate/manifests/kustomization.yaml
@@ -9,9 +9,15 @@ generators:
 
 
 helmCharts:
-    - name: mend-renovate-ce
-      repo: https://mend.github.io/renovate-ce-ee
+    - name: renovate
+      repo: https://docs.renovatebot.com/helm-charts
       version: "*"
-      releaseName: mend-renovate-ce
+      releaseName: renovate
       namespace: renovate
       valuesFile: ./values.yaml
+    # - name: mend-renovate-ce
+    #   repo: https://mend.github.io/renovate-ce-ee
+    #   version: "*"
+    #   releaseName: mend-renovate-ce
+    #   namespace: renovate
+    #   valuesFile: ./values.yaml
