--- a/argocd/apps/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/mend-renovate/manifests/values.yaml
@@ -14,6 +14,7 @@ renovate:
       "repositories": [
         "myanello/homelab"
       ],
+      "dependencyDashboard": true,
       "extends": ["config:best-practices"]
     }
 
