--- a/argocd/apps/media-server/qbittorrent/kustomization.yaml
+++ b/argocd/apps/media-server/qbittorrent/kustomization.yaml
@@ -21,5 +21,5 @@ patches:
       template:
         spec:
           containers:
-          - name: qbittorrent
-            image: ghcr.io/linuxserver/qbittorrent:latest
+          - name: gluetun
+            image: ghcr.io/qdm12/gluetun:v3.39.1
