--- a/argocd/apps/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/mend-renovate/manifests/values.yaml
@@ -7,6 +7,8 @@ renovate:
     module.exports = {
         "dependencyDashboard": true,
         "extends": ["config:best-practices"]
+        helm: {
+          "fileMatch": ["(^|/)app\\.ya?ml$"],
     }
 
 
