--- a/argocd/apps/mend-renovate/manifests/vs.yaml
+++ b/argocd/apps/mend-renovate/manifests/vs.yaml
@@ -13,4 +13,34 @@ spec:
         host: renovate
         port:
           number: 8080
-      
+# ---
+# apiVersion: security.istio.io/v1beta1
+# kind: AuthorizationPolicy
+# metadata:
+#   name: allow-github
+#   namespace: istio-system
+# spec:
+#   selector:
+#     matchLabels:
+#       app.kubernetes.io/name: mend-renovate-ce
+#   action: ALLOW
+#   rules:
+#   - from:
+#     - source:
+#         ipBlocks:
+#         # Replace these with GitHub's IP addresses or CIDR ranges
+#         - 192.30.252.0/22
+#         - 185.199.108.0/22
+#         - 140.82.112.0/20
+#         - 192.168.0.0/16
+# ---
+# apiVersion: security.istio.io/v1beta1
+# kind: AuthorizationPolicy
+# metadata:
+#   name: deny-all
+#   namespace: istio-system
+# spec:
+#   selector:
+#     matchLabels:
+#       app.kubernetes.io/name: mend-renovate-ce
+#   action: DENY
