fix renoveat helm

--- a/argocd/apps/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/mend-renovate/manifests/values.yaml
@@ -7,8 +7,10 @@ renovate:
     module.exports = {
         "dependencyDashboard": true,
         "extends": ["config:best-practices"],
-        "helm": {
-          "fileMatch": ["(^|/)app\\.ya?ml$"]
+        "manager": {
+          "helm": {
+            "fileMatch": ["(^|/)app\\.ya?ml$"]
+          }
         }
     }
 
