fix renoveat helm2

--- a/argocd/apps/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/mend-renovate/manifests/values.yaml
@@ -7,7 +7,7 @@ renovate:
     module.exports = {
         "dependencyDashboard": true,
         "extends": ["config:best-practices"],
-        "manager": {
+        "managers": {
           "helm": {
             "fileMatch": ["(^|/)app\\.ya?ml$"]
           }
