--- a/argocd/apps/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/mend-renovate/manifests/values.yaml
@@ -3,6 +3,7 @@ renovate:
   mendRnvPlatform: github
   mendRnvEndPoint: https://api.github.com/
   existingSecret: renovate-secrets
+  mendRnvCronJobSchedulerAll: '*/10 * * * *'
   config: |
     module.exports = {
       "dependencyDashboard": true,
@@ -11,7 +12,7 @@ renovate:
         "fileMatch": ["argocd/.+\\.yaml$"],
       }
     }
-
+  
 
 affinity:
   nodeAffinity:
