--- a/argocd/apps/mend-renovate/manifests/kustomization.yaml
+++ b/argocd/apps/mend-renovate/manifests/kustomization.yaml
@@ -18,6 +18,6 @@ patches:
       kind: Deployment
       name: mend-renovate-ce
     patch: |-
-      - op: add
+      - op: replace
         path: /spec/revisionHistoryLimit
         value: 3
