--- a/argocd/apps/nextcloud/manifests/kustomization.yaml
+++ b/argocd/apps/nextcloud/manifests/kustomization.yaml
@@ -8,10 +8,9 @@ patches:
     patch: |-
       - op: add
         path: /spec/template/spec/
-        value: hostNetwork: true
-      - op: add
-        path: /spec/template/spec/
-        value: ClusterFirstWithHostNet: true        
+        value: 
+          hostNetwork: true
+          ClusterFirstWithHostNet: true        
 
 generators:
   - ./secret-generator.yaml
