--- a/argocd/apps/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/mend-renovate/manifests/values.yaml
@@ -11,6 +11,9 @@ renovate:
       "argocd": {
         "fileMatch": ["argocd/.+\\.yaml$"],
       }
+      "kubernetes": {
+        "fileMatch": ["\\deploy\\.yaml$"],
+      }
     }
   
 cacheInMemory: 
