--- a/argocd/apps/frigate/manifests/kustomization.yaml
+++ b/argocd/apps/frigate/manifests/kustomization.yaml
@@ -21,7 +21,7 @@ patches:
 helmCharts:
     - name: frigate
       repo: https://blakeblackshear.github.io/blakeshome-charts/
-      version: "*"
+      version: "7.7.0"
       releaseName: frigate
       namespace: frigate
       valuesFile: ./config.yaml
