--- a/argocd/apps/frigate/manifests/kustomization.yaml
+++ b/argocd/apps/frigate/manifests/kustomization.yaml
@@ -25,3 +25,7 @@ helmCharts:
       releaseName: frigate
       namespace: frigate
       valuesFile: ./config.yaml
+
+images:
+  - name: frigate
+    newTag: stable
