--- a/argocd/apps/cert-manager/app.yaml
+++ b/argocd/apps/cert-manager/app.yaml
@@ -18,7 +18,7 @@ spec:
     - CreateNamespace=true
   source:
     repoURL: https://charts.jetstack.io
-    targetRevision: '*'
+    targetRevision: '1.17.0'
     chart: cert-manager
     helm:
       valuesObject:
