--- a/argocd/apps/infra/app-set.yaml
+++ b/argocd/apps/infra/app-set.yaml
@@ -28,3 +28,4 @@ spec:
         path: "{{path}}"
         repoURL: https://github.com/myanello/homelab.git
         targetRevision: HEAD
+        recurse: true
