--- a/argocd/apps/infra/app-set.yaml
+++ b/argocd/apps/infra/app-set.yaml
@@ -28,4 +28,5 @@ spec:
         path: "{{path}}"
         repoURL: https://github.com/myanello/homelab.git
         targetRevision: HEAD
-        recurse: true
+        directory:
+          recurse: true
