--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -18,7 +18,7 @@ spec:
       - CreateNamespace=true
   source:
     repoURL: https://istio-release.storage.googleapis.com/charts
-    targetRevision: "*"
+    targetRevision: "1.24.2"
     chart: istiod
     helm:
 ---
@@ -42,7 +42,7 @@ spec:
       - CreateNamespace=true
   source:
     repoURL: https://istio-release.storage.googleapis.com/charts
-    targetRevision: "*"
+    targetRevision: "1.24.2"
     chart: base
     helm:
 ---
@@ -66,7 +66,7 @@ spec:
       - CreateNamespace=true
   source:
     repoURL: https://istio-release.storage.googleapis.com/charts
-    targetRevision: "*"
+    targetRevision: "1.24.2"
     chart: gateway
     helm:
       valuesObject:
