--- a/argocd/apps/infra/nvidia-operator/app.yaml
+++ b/argocd/apps/infra/nvidia-operator/app.yaml
@@ -16,9 +16,9 @@ spec:
     syncOptions:
       - CreateNamespace=true
   project: default
-  sources:
-    - repoURL: https://github.com/myanello/homelab.git
-      targetRevision: HEAD
-      path: argocd/apps/nvidia-operator/manifests
+  source:
+    repoURL: https://github.com/myanello/homelab.git
+    targetRevision: HEAD
+    path: argocd/apps/infra/nvidia-operator/manifests
 
 
