--- a/argocd/apps/infra/backrest/manifests/deploy.yaml
+++ b/argocd/apps/infra/backrest/manifests/deploy.yaml
@@ -33,7 +33,7 @@ spec:
             - name: BACKREST_DATA
               value: /data
             - name: BACKREST_CONFIG
-              value: /config/config/json
+              value: /config/config.json
             - name: XDG_CACHE_HOME
               value: /cache
             - name: TZ
