--- a/argocd/apps/infra/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/infra/mend-renovate/manifests/values.yaml
@@ -12,7 +12,7 @@ renovate:
         "fileMatch": ["argocd/.+\\.yaml$"],
       },
       "kubernetes": {
-        "fileMatch": ["\\deploy\\.yaml$"],
+        "fileMatch": ["deploy\.yaml$"],
       }
     }
   
