--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "packageRule": [
+  "packageRules": [
     {
       "matchDatasources": ["docker", "kustomize", "kubernetes"],
       "registryURLs": ["dockerhub.io", "ghcr.io"]
