--- a/argocd/apps/infra/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/infra/mend-renovate/manifests/values.yaml
@@ -14,6 +14,12 @@ renovate:
       "kubernetes": {
         "fileMatch": ["deploy\.yaml$"],
       }
+      "packageRules": [
+        {
+          "matchDatasources": ["docker", "kustomize", "kubernetes"],
+          "registryURLs": ["dockerhub.io", "ghcr.io"]
+        }
+      ]
     }
   
 cacheInMemory: 
