renovate chart version

--- a/argocd/apps/infra/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/infra/mend-renovate/manifests/values.yaml
@@ -4,6 +4,8 @@ renovate:
   mendRnvEndPoint: https://api.github.com/
   existingSecret: renovate-secrets
   mendRnvCronJobSchedulerAll: '*/2 * * * *'
+  extraEnvVars:
+    - LOG_LEVEL=debug
   config: |
     module.exports = {
       "dependencyDashboard": true,
