--- a/argocd/apps/infra/mend-renovate/manifests/kustomization.yaml
+++ b/argocd/apps/infra/mend-renovate/manifests/kustomization.yaml
@@ -8,7 +8,7 @@ generators:
 helmCharts:
   - name: mend-renovate-ce
     repo: https://mend.github.io/renovate-ce-ee
-    version: "*"
+    version: "9.4.0"
     releaseName: mend-renovate-ce
     namespace: renovate
     valuesFile: ./values.yaml
