--- a/argocd/apps/argocd/kustomization.yaml
+++ b/argocd/apps/argocd/kustomization.yaml
@@ -1,9 +1,8 @@
 resources:
   - ./cm.yaml
-
+  - ./vs.yaml
 # generators:
 #   - ./secret-generator.yaml
-
 
 # helmCharts:
 #   - name: mend-renovate-ce
