--- a/argocd/apps/argocd/manifests/kustomization.yaml
+++ b/argocd/apps/argocd/manifests/kustomization.yaml
@@ -12,7 +12,8 @@ resources:
 #     namespace: renovate
 #     valuesFile: ./values.yaml
 
-# patches:
+patches:
+  - path: ./ksops-patch.yaml
 #   - target:
 #       kind: Deployment
 #       name: mend-renovate-ce
