--- a/argocd/apps/argocd/manifests/kustomization.yaml
+++ b/argocd/apps/argocd/manifests/kustomization.yaml
@@ -14,6 +14,18 @@ resources:
 
 patches:
   - path: ./ksops-patch.yaml
+  - target:
+      kind: Service
+      name: argocd-server
+    patch: |-
+      - op: replace
+        path: /spec/type
+        value: LoadBalancer
+      - op: add
+        path: /metadata/annotations
+        value:
+          metallb.universe.tf/loadBalancerIPs: 10.10.8.4
+
 #   - target:
 #       kind: Deployment
 #       name: mend-renovate-ce
