--- a/argocd/apps/argocd/manifests/kustomization.yaml
+++ b/argocd/apps/argocd/manifests/kustomization.yaml
@@ -1,24 +1,4 @@
 resources:
   - ./vs.yaml
-
-patches:
-  - target:
-      kind: Service
-      name: argocd-server
-    patch: |-
-      - op: replace
-        path: /spec/type
-        value: LoadBalancer
-      - op: add
-        path: /metadata/annotations
-        value: |
-          metallb.universe.tf/loadBalancerIPs: 10.10.8.4
-  - target:
-      kind: ConfigMap
-      name: argocd-cm
-    patch: |-
-      - op: add
-        path: /data/
-        value: |
-          kustomize.buildOptions: --enable-helm --enable-alpha-plugins --enable-exec
-
+  - ./lb.yaml
+  - ./cm.yaml
