--- a/argocd/apps/dev/tekton/tekton-dashboard-kustomize/kustomization.yaml
+++ b/argocd/apps/dev/tekton/tekton-dashboard-kustomize/kustomization.yaml
@@ -2,13 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- git@github.com:rescale/rescale-cicd//external/tekton/dashboard/v0.50.0/?ref=main # The upstream tekton dashboard manifest, the // is intentional and correct kustomize syntax to separate the repo and the path
-- ./certificate.yaml # add the cert resource without changing anything
+- git@github.com:myanello/homelab//external/tekton/dashboard/v0.50.0/?ref=main # The upstream tekton dashboard manifest, the // is intentional and correct kustomize syntax to separate the repo and the path
 # - ../../../../../../../../rescale-cicd/external/tekton/dashboard/v0.51.0 # the path to our local cicd repo with the upstream manifest. this is correct if ballista and rescale-cicd are in the same directory. useful for testing changes to the cicd repo locally, should be commented out for production
 
 images:
 - name: gcr.io/tekton-releases/github.com/tektoncd/dashboard/cmd/dashboard
-  newName: 301733247343.dkr.ecr-fips.us-gov-east-1.amazonaws.com/ironbank/tektoncd/dashboard
+  newName: 111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/dashboard
   newTag: v0.50.0@sha256:8462d4970d3c6afabd90e1981919acbff56bf2fbdbbfcc2dd545d99202bfa272
 
 patches:
