--- a/argocd/apps/infra/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/infra/mend-renovate/manifests/values.yaml
@@ -5,7 +5,8 @@ renovate:
   existingSecret: renovate-secrets
   mendRnvCronJobSchedulerAll: '*/2 * * * *'
   extraEnvVars:
-    - LOG_LEVEL=debug
+    - name: logging_level
+      value: debug
   config: |
     module.exports = {
       "dependencyDashboard": true,
