--- a/argocd/apps/argocd/manifests/vs.yaml
+++ b/argocd/apps/argocd/manifests/vs.yaml
@@ -12,6 +12,6 @@ spec:
   http:
   - route:
     - destination:
-        host: argocd
+        host: argocd-server
         port:
           number: 8080
