--- a/argocd/apps/infra/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/infra/mend-renovate/manifests/values.yaml
@@ -3,7 +3,7 @@ renovate:
   mendRnvPlatform: github
   mendRnvEndPoint: https://api.github.com/
   existingSecret: renovate-secrets
-  mendRnvCronJobSchedulerAll: '*/2 * * * *'
+  mendRnvCronJobSchedulerAll: "*/2 * * * *"
   extraEnvVars:
     - name: LOG_LEVEL
       value: info
@@ -20,16 +20,16 @@ renovate:
       "packageRules": [
         {
           "matchDatasources": ["docker", "kustomize", "kubernetes"],
-          "matchPackageNames": ["1111111.dkr.ecr.us-east-1.amazonaws.com/tekton-releases/github.com/tektoncd/pipeline/cmd/resolvers"],
+          "matchPackageNames": ["/.*tekton-releases\/github\.com\/tektoncd\/pipeline\/cmd\/resolvers.*/"],
           "overrideDatasource": "ghcr.io",
           "overridePackageName": "tektoncd/pipeline/resolvers-ff86b24f130c42b88983d3c13993056d"
         }
       ]
     }
-  
-cacheInMemory: 
+
+cacheInMemory:
   enabled: true
-  
+
 affinity:
   nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
