--- a/argocd/apps/infra/mend-renovate/manifests/values.yaml
+++ b/argocd/apps/infra/mend-renovate/manifests/values.yaml
@@ -23,6 +23,24 @@ renovate:
           "matchPackageNames": ["/.*tektoncd\/pipeline\/cmd\/resolvers.*/"],
           "overrideDatasource": "ghcr.io",
           "overridePackageName": "tektoncd/pipeline/resolvers-ff86b24f130c42b88983d3c13993056d",
+        },
+        {
+          "matchDatasources": ["docker", "kustomize", "kubernetes"],
+          "matchPackageNames": ["/.*tektoncd\/pipeline\/cmd\/webhook.*/"],
+          "overrideDatasource": "ghcr.io",
+          "overridePackageName": "tektoncd/pipeline/webhook-d4749e605405422fd87700164e31b2d1",
+        },
+        {
+          "matchDatasources": ["docker", "kustomize", "kubernetes"],
+          "matchPackageNames": ["/.*tektoncd\/pipeline\/cmd\/controller.*/"],
+          "overrideDatasource": "ghcr.io",
+          "overridePackageName": "tektoncd/pipeline/controller-10a3e32792f33651396d02b6855a6e36",
+        },
+        {
+          "matchDatasources": ["docker", "kustomize", "kubernetes"],
+          "matchPackageNames": ["/.*tektoncd\/pipeline\/cmd\/events.*/"],
+          "overrideDatasource": "ghcr.io",
+          "overridePackageName": "tektoncd/pipeline/events-a9042f7efb0cbade2a868a1ee5ddd52c",
         }
       ]
     }
