--- a/argocd/apps/paperless/manifests/pvc.yaml
+++ b/argocd/apps/paperless/manifests/pvc.yaml
@@ -45,3 +45,15 @@ spec:
   resources:
     requests:
       storage: 1Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: db
+spec:
+  storageClassName: nfs-storage
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
