--- a/argocd/apps/paperless/manifests/cm.yaml
+++ b/argocd/apps/paperless/manifests/cm.yaml
@@ -9,3 +9,5 @@ data:
   USERMAP_GID: '1000'
   PAPERLESS_URL: https://paperless.yanello.net
   PAPERLESS_TIME_ZONE: America/Chicago
+  PAPERLESS_REDIS: redis://redis:6379
+  PAPERLESS_DBHOST: paperless-db
