--- a/argocd/apps/paperless/manifests/paperless-secrets.enc.yaml
+++ b/argocd/apps/paperless/manifests/paperless-secrets.enc.yaml
@@ -5,6 +5,7 @@ metadata:
 type: Opaque
 stringData:
     PAPERLESS_SECRET_KEY: ENC[AES256_GCM,data:xNm3XwQ8jHpdSRdnf/p8NaquurxsoNbRJptZ1QGWY9Sn/A+yt5upIg==,iv:x0boH9XCaUH2NjPV2x+LQ29XxkVcyDzpo99FsYRiFmc=,tag:SJ75d7R2p3UJhBvkLoAbGw==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:FmNunhhOepb6Rq5Z8wtNG/KNN6hpzZKmVMNvTf//LJK8aaZRvkq7yA==,iv:yKiAYJRkuRtFaW6V2nScl93nLBBdVdCq9O1C0KPup9s=,tag:jp97pkVvhjVozklKt1fgRw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,8 +21,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-09T16:21:40Z"
-    mac: ENC[AES256_GCM,data:7v8TycAvQua7NktEHJdzUY5ouF1ILefvXO+UlI0l6khoyLSJR623HI/YP/uj4ireD4a6MfEJN30Fyg13Vw4DxcQxQWCiJjXcEJ17RnR44Y6za+tm9ymBKaM+eSF/jNQcdBMYmPZ2+sUTHYTO0czGlRBoET6O1bJSHh6hNeOOYic=,iv:3n/ozEbIQJQ7L5MS79baUoaIW3oZOhxMJXi6IeUtSr4=,tag:92u3sDJL7Nl24pvc1npuUg==,type:str]
+    lastmodified: "2025-02-09T16:34:11Z"
+    mac: ENC[AES256_GCM,data:TfTScQr7ge5foW7mt05q9MxUCR3J3eTq3LbAyZ9L9xlStFT4zcC2yBwMoP1aXLRb0r2UxsqKtY8SVZ1RJtR4xSLxo6QDQ0UIZLT/twLYoL6Prw+kixqDFzErJ+UkUkIA5or5F55IWYjCeNqQlGikhtx5D3yWNK9gmsIUC/eXppk=,iv:6se0PUeoMBZJlZUpJn03bdZ5VpO38eRMDAe7en27Dew=,tag:Zv+o29AnivcjHNoQ9wHGmQ==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
