--- a/argocd/apps/paperless/paperless-secrets.enc.yaml
+++ b/argocd/apps/paperless/paperless-secrets.enc.yaml
@@ -5,7 +5,8 @@ metadata:
 type: Opaque
 stringData:
     PAPERLESS_SECRET_KEY: ENC[AES256_GCM,data:xNm3XwQ8jHpdSRdnf/p8NaquurxsoNbRJptZ1QGWY9Sn/A+yt5upIg==,iv:x0boH9XCaUH2NjPV2x+LQ29XxkVcyDzpo99FsYRiFmc=,tag:SJ75d7R2p3UJhBvkLoAbGw==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:FmNunhhOepb6Rq5Z8wtNG/KNN6hpzZKmVMNvTf//LJK8aaZRvkq7yA==,iv:yKiAYJRkuRtFaW6V2nScl93nLBBdVdCq9O1C0KPup9s=,tag:jp97pkVvhjVozklKt1fgRw==,type:str]
+    MARIADB_PASSWORD: ENC[AES256_GCM,data:Z+wIpryUk0oeVjAyOLKNnFfe+zVG7CBDc3DY7BLZQEOHW5oGTnnseg==,iv:XOrOiUVDGEO1Q1tBkWbnV93w9LUHm/88cMCEEkWUPCk=,tag:tn4yeUl4SYsZ6H3SVkFtsg==,type:str]
+    MARIADB_ROOT_PASSWORD: ENC[AES256_GCM,data:e57b/mVxTkvTfEjatK2ZcBIT4CdKFRAVlKSakr1ZblUvbCW6ZYtAuQ==,iv:PcBAlJS3vuqBlOdmhDpvUJ27e9jL/RwFXjbldpuQVRQ=,tag:TO6AUiCOGvE7P0BpnSu2sA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-09T16:34:11Z"
-    mac: ENC[AES256_GCM,data:TfTScQr7ge5foW7mt05q9MxUCR3J3eTq3LbAyZ9L9xlStFT4zcC2yBwMoP1aXLRb0r2UxsqKtY8SVZ1RJtR4xSLxo6QDQ0UIZLT/twLYoL6Prw+kixqDFzErJ+UkUkIA5or5F55IWYjCeNqQlGikhtx5D3yWNK9gmsIUC/eXppk=,iv:6se0PUeoMBZJlZUpJn03bdZ5VpO38eRMDAe7en27Dew=,tag:Zv+o29AnivcjHNoQ9wHGmQ==,type:str]
+    lastmodified: "2025-02-09T17:25:51Z"
+    mac: ENC[AES256_GCM,data:ecuNoJ5szooVYdLI3uScRvGnx05OzD/k6/iqqvAQ/abpmOGz9MlNlM9MWTewk+iurfTD6nmxmdDGU77PsedNIMrkFQN/D3n3YZuE/3WqaSFDTDwvRTGlAFFIZNd8CdZ2Gtw8F7om8wmy57+7arfP5RYLDqAwF35hJD1Jq77v4r4=,iv:NsGqbjzUFLhgEzIrfudTxUJDZU8tKgVGshOQ6Pedlfs=,tag:g5z3fPF4j8CTz5G2H78oMg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
