--- a/argocd/apps/paperless/cm.yaml
+++ b/argocd/apps/paperless/cm.yaml
@@ -11,3 +11,5 @@ data:
   PAPERLESS_TIME_ZONE: America/Chicago
   PAPERLESS_REDIS: redis://paperless-redis:6379
   PAPERLESS_DBHOST: paperless-db
+  PAPERLESS_DBPORT: '3306'
+  PAPERLESS_CONSUMER_POLLING: '5'
