--- a/argocd/apps/paperless/deploy.yaml
+++ b/argocd/apps/paperless/deploy.yaml
@@ -86,7 +86,7 @@ spec:
         app: paperless-db
     spec:
       containers:
-        - image: docker.io/library/postgres:16
+        - image: docker.io/library/mariadb:11
           imagePullPolicy: Always
           name: paperless-db
           ports:
