--- a/argocd/apps/paperless/cm.yaml
+++ b/argocd/apps/paperless/cm.yaml
@@ -11,5 +11,6 @@ data:
   PAPERLESS_TIME_ZONE: America/Chicago
   PAPERLESS_REDIS: redis://paperless-redis:6379
   PAPERLESS_DBHOST: paperless-db
+  PAPERLESS_DBENGINE: mariadb
   PAPERLESS_DBPORT: '3306'
   PAPERLESS_CONSUMER_POLLING: '5'
