--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -14,6 +14,7 @@ renovate:
         "dependencyDashboardApproval": true,
       },
       "dependencyDashboardOSVVulnerabilitySummary": "all",
+      "ossVulnerabilityAlerts": true,
       "extends": ["config:best-practices", "mergeConfidence:all-badges"],
       "argocd": {
         "fileMatch": ["argocd/.+\\.yaml$"],
