--- a/argocd/apps/paperless/cm.yaml
+++ b/argocd/apps/paperless/cm.yaml
@@ -8,6 +8,7 @@ data:
   USERMAP_UID: '1000'
   USERMAP_GID: '1000'
   PAPERLESS_URL: https://paperless.yanello.net
+  PAPERLESS_PORT: '8000'
   PAPERLESS_TIME_ZONE: America/Chicago
   PAPERLESS_REDIS: redis://paperless-redis:6379
   PAPERLESS_DBHOST: paperless-db
